# coursework

./: .gitignore  README.md  logger.py  main.py  mylog.txt  pyproject.toml
donor/: main.py
src/: README.md   csv_xlsx.py  decorators.py  external_api.py  filename  generators.py  masks.py  processing.py  regular_expressions.py  utils.py  widget.py
tests/: README.md   conftest.py  pyproject.toml  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_regular_expressions.py  test_widget.py
