[tool.poetry]
name = "home-project"
version = "0.1.0"
description = ""
authors = ["Andrey Sarason <sarason@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
